--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,94 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  line-height: normal;
+  background-color: rgba(12, 9, 11, 1);
 }
+:root {
+  --font-inter: Inter;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  --font-size-base: 1rem; 
+  --font-size-sm: 0.875rem; 
+  --font-size-xs: 0.75rem; 
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  --font-size-13xl: 2rem; 
+  --font-size-7xl: 1.625rem; 
+  --font-size-lgi: 1.1875rem; 
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  --font-size-5xl: 1.5rem; 
+
+  --color-gray-100: #282828;
+  --color-gray-200: rgba(255, 255, 255, 0.5);
+  --color-gray-300: rgba(40, 40, 40, 0.8);
+  --color-gray-400: rgba(255, 255, 255, 0.7);
+
+  --color-red: #ff0000;
+  --light-white: #fff;
+
+  --color-gainsboro-100: #e6e6e6;
+  --color-gainsboro-200: #d9d9d9;
+  --color-darkblue: #132aac;
+
+  --color-darkgray: #a49e9e;
+  --color-whitesmoke: #f5f5f5;
+  --color-lavender: #e8eaf6;
+  --color-dimgray: #595656;
+
+  --gap-0: 0rem; 
+  --gap-3xl: 1.375rem; 
+  --gap-12xl: 1.9375rem; 
+  --gap-6xs: 0.4375rem; 
+  --gap-5xs: 0.5rem; 
+  --gap-base: 1rem; 
+  --gap-9xs: 0.25rem; 
+  --gap-45xl: 4rem;
+  --gap-5xl: 1.5rem; 
+  --gap-4xl: 1.4375rem; 
+  --gap-xl: 1.25rem; 
+  --gap-xs: 0.75rem; 
+  --gap-11xs: 0.125rem; 
+  --gap-3xl-7: 1.41875rem; 
+  --gap-26xl: 2.8125rem;
+  --gap-3xs: 0.625rem;
+  --gap-17xl: 2.25rem; 
+  --gap-lg: 1.125rem;
+
+  --gap-29xl: 3rem; 
+  --gap-3xs: 0.625rem; 
+
+  --padding-5xl: 1.5rem;
+  --padding-xs: 0.75rem; 
+  --padding-5xs: 0.5rem; 
+  --padding-xl: 1.25rem; 
+  --padding-10xs: 0.1875rem; 
+  --padding-6xs-5: 0.40625rem;
+  --padding-4xl: 1.4375rem;
+
+  --padding-12xs: 0.0625rem;
+  --padding-133xl: 9.5rem; 
+  --padding-6xs: 0.4375rem; 
+  --padding-smi: 0.8125rem; 
+  --padding-13xl: 2rem; 
+  --padding-8xs: 0.3125rem; 
+  --padding-7xs: 0.375rem; 
+  --padding-12xl: 1.9375rem;
+  --padding-sm: 0.875rem; 
+  --padding-5xs-5: 0.46875rem; 
+  --padding-113xl: 8.25rem; 
+  --padding-2xl: 1.3125rem; 
+  --padding-29xl: 3rem; 
+  --padding-base: 1rem; 
+  --padding-1010xl: 64.3125rem; 
+  --padding-10xl: 1.8125rem;
+  --padding-3xs: 0.625rem; 
+  --padding-2xs: 0.6875rem; 
+  --padding-19xl: 2.375rem; 
+
+  --br-10xs: 0.1875rem; 
+  --br-231xl: 15.625rem;
+  --br-32xl: 3.1875rem; 
+  --br-5xs: 0.5rem; 
+
+  --br-9xs: 0.25rem; 
+  --br-5xs: 0.5rem;
 }
