--- a/src/components/PlatformLogo.module.css
+++ b/src/components/PlatformLogo.module.css
@@ -1,9 +1,7 @@
 .platformLogo {
-    align-self: stretch;
-    width: 6.669rem;
-    position: relative;
-    max-height: 100%;
-    overflow: hidden;
-    flex-shrink: 0;
-    min-height: 2rem; 
-  }
+  width: 6.6rem;
+  height: 2rem;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
