--- a/src/components/CategoryTitle.module.css
+++ b/src/components/CategoryTitle.module.css
@@ -19,4 +19,14 @@
     font-size: var(--font-size-13xl);
     font-weight: 700;
     font-family: inherit;
+    width: auto;
+}
+
+.categoryTitleInner {
+  max-width: 100%;
+  flex: 1;
+  flex-direction: column;
+  padding: var(--padding-xs) 0 0;
+  box-sizing: border-box;
+  min-width: 14.313rem;
 }
