--- a/src/components/AlbumCard/AlbumCard.module.css
+++ b/src/components/AlbumCard/AlbumCard.module.css
@@ -1,53 +1,19 @@
-.songRowItem {
-    align-self: stretch;
-    gap: var(--gap-5xl);
-    text-align: center;
-    font-size: var(--font-size-xs);
-    color: var(--light-white);
-    font-family: var(--font-inter);
-}
-
-.categoryTitleGroup,
-.songPlayingParent {
+.albumCardContainer {
     align-self: stretch;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
 }
 
-.songPlayingParent {
+.albumCardContainer {
     justify-content: flex-start;
     flex-wrap: wrap;
-    padding: 0 var(--padding-xl) 0 0;
     gap: 1.5rem 1.4375rem; 
     text-align: left;
     font-size: var(--font-size-base);
     color: var(--light-white);
     font-family: var(--font-inter);
-}
-
-.categoryTitleGroup {
-    justify-content: space-between;
-    gap: var(--gap-xl);
-}
-
-.categoryTitle {
-    max-width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-xs);    
-}
-
-.buttonGroup {
-    width: 14.8125rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.3125rem 0; 
-    box-sizing: border-box;
+    padding-bottom: 7rem;
 }
 
 .albumCard {
@@ -73,7 +39,7 @@
 .moreIcon {
     position: absolute;
     top: 2rem;
-    right: 0.5rem; 
+    right: 1rem; 
     width: 1.5rem; 
     height: 1.5rem; 
     background-size: contain;
@@ -83,7 +49,7 @@
     border-radius: 50%;
 }
 
-.expandedPicture {
+.pictureContainer {
     top: 0;
     left: 0;
     display: flex;
@@ -95,7 +61,7 @@
 .playIcon {
     position: absolute;
     bottom: 4rem; 
-    right: 0.75rem; 
+    right: 1.25rem; 
     width: 2.5rem; 
     height: 2.5rem;
     background-size: cover;
