--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: var(--padding-13xl) var(--padding-19xl);
+  padding: 2rem var(--padding-19xl);
   gap: var(--gap-base);
 }
 .avatarIcon {
@@ -28,7 +28,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: var(--padding-5xl) var(--padding-29xl);
+  padding: 1.5rem var(--padding-29xl);
   box-sizing: border-box;
   max-width: 100%;
 }
@@ -38,8 +38,12 @@
   align-items: flex-start;
   justify-content: flex-start;
   max-width: 100%;
+  height: 6rem;
   text-align: left;
   font-size: var(--font-size-sm);
   color: var(--color-dimgray);
   font-family: var(--font-inter);
+  background-color: rgba(12, 9, 11, 1);
+  position: fixed;
+  z-index: 1000;
 }
