--- a/src/components/LeftRightIcon/LeftRightIcon.module.css
+++ b/src/components/LeftRightIcon/LeftRightIcon.module.css
@@ -1,4 +1,4 @@
-.leftRightIconGroup {
+.iconGroup {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -7,8 +7,7 @@
     margin-left: auto;
 }
 
-.leftIcon,
-.rightIcon {
+.icon {
   object-fit: contain;
   height: 2.5rem;
   width: 2.5rem;
