--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -33,7 +33,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: var(--padding-5xl) var(--padding-base);
+  padding: var(--padding-5xl) var(--padding-5xs-5);
+  width: 100%;
 }
 .sidebarExpandedAndCollapsed {
   justify-content: flex-start;
@@ -43,12 +44,7 @@
   color: var(--color-lavender);
   font-family: var(--font-inter);
 }
-.iconForMenu {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-.home,
-.iconForMenu {
+.home {
   position: relative;
 }
 .home {
@@ -63,25 +59,31 @@
 .item {
   align-self: stretch;
   display: flex;
-  align-items: center;
   justify-content: center;
-  gap: var(--gap-11xs);
-  width: 100%; 
+}
+.open .homeParent,
+.item {
+  align-items: flex-start;
+}
+.closed .homeParent,
+.item {
+  align-items: center;
 }
 .homeParent {
   flex-direction: column;
+  width: 100%; 
 }
 .item {
   border-radius: var(--br-5xs);
   align-items: center;
-  justify-content: center;
   padding: var(--padding-xs) var(--padding-smi);
-  gap: var(--gap-9xs);
+  gap: var(--gap-xs);
   text-align: center;
   font-size: var(--font-size-3xs);
   color: var(--color-lavender);
   font-family: var(--font-inter);
   transition: background-color 0.3s ease;
+  max-width: 11.25rem;
 }
 .item:hover  {
   background-color: #282828
@@ -93,23 +95,19 @@
   flex-direction: column;
 }
 .button {
-  cursor: pointer;
   border: 0;
   padding: var(--padding-xs) var(--padding-smi);
   background-color: var(--color-gray-100);
-  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
-  border-radius: var(--br-32xl);
+  justify-content: center;
   color: var(--color-lavender);
-  font-family: var(--font-inter);
   text-decoration: none;
-  letter-spacing: -0.01em;
-  font-weight: 600;
   color: inherit;
-  min-width: 1.813rem;
+  width: 12.5rem;
+  gap: var(--padding-xs);
+
 }
 .playlistItems {
   border-top: 0.031rem solid #D9D9D9;
@@ -118,12 +116,12 @@
   align-items: center;
   justify-content: flex-start;
   gap: var(--gap-11xs);
-  width: 100%; 
   align-items: center;
   justify-content: center;
-  padding: 3.125rem var(--padding-smi);
+  padding: 1.75rem 0 0 0;
   gap: var(--gap-9xs);
   text-align: center;
+  width: 13.5rem;
 }
   
   
