--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,17 @@
 .mainLayout {
   display: flex;
 }
+
+.content {
+  flex-grow: 1;
+}
+
+.content.shifted {
+  margin-left: 6.25rem; 
+  width: calc(100% - 15.625rem)
+}
+
+.content.full {
+  margin-left: 15.625rem; 
+  width: calc(100% - 15.625rem)
+}
