--- a/src/components/AlbumCard/AlbumCard.module.css
+++ b/src/components/AlbumCard/AlbumCard.module.css
@@ -3,11 +3,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-}
-
-.albumCardContainer {
     justify-content: flex-start;
-    flex-wrap: wrap;
+    width: 100%;
     gap: 1.5rem 1.4375rem; 
     text-align: left;
     font-size: var(--font-size-base);
@@ -17,6 +14,7 @@
 }
 
 .albumCard {
+    flex: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -33,12 +31,13 @@
     width: 12.5rem; 
     position: relative;
     object-fit: cover;
+    max-width: 100%;
 }
 
 .moreIcon {
     position: absolute;
-    top: 2rem;
-    right: 0.5rem; 
+    top: 6%;
+    right: 6%; 
     width: 1.5rem; 
     height: 1.5rem; 
     background-size: contain;
@@ -55,12 +54,13 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
+    position: relative;
 }
 
 .playIcon {
     position: absolute;
-    bottom: 4rem; 
-    right: 0.75rem; 
+    bottom: 6%; 
+    right: 6%; 
     width: 2.5rem; 
     height: 2.5rem;
     background-size: cover;
