--- a/src/components/CreatePlaylist/CreatePlaylist.module.css
+++ b/src/components/CreatePlaylist/CreatePlaylist.module.css
@@ -3,14 +3,15 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 75.5rem;
+    width: 100%;
     box-sizing: border-box;
-    gap: 4rem;
+    gap: 2rem;
     line-height: normal;
     letter-spacing: normal;
-    padding: 6rem 0 0 3rem;
+    padding: 6rem 0 0 2rem;
     font-size: var(--font-size-xs);
     font-family: var(--font-inter);
+    height: 100vh;
 }
 
 .categoryTitle {
