--- a/src/components/MainSection/MainSection.module.css
+++ b/src/components/MainSection/MainSection.module.css
@@ -2,10 +2,9 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    max-width: 100%;
     flex-direction: column;
-    width: 75.5rem; 
-    padding: 7rem 0 0 2rem;
+    width: 100%; 
+    padding: 7rem 0 0 1rem;
     box-sizing: border-box;
     gap: 4rem; 
     line-height: normal;
