--- a/src/components/SongCard/SongCard.module.css
+++ b/src/components/SongCard/SongCard.module.css
@@ -8,11 +8,12 @@
     padding: 0 var(--padding-5xl) 0 0;
     padding-top: 1.5rem;
     box-sizing: border-box;
-    gap: 1.5rem 1.419rem; 
+    gap: 1.5rem 0rem; 
     min-height: 16.5rem; 
 }
 
 .songCard {
+    flex: auto;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
