--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,10 +7,5 @@
     letter-spacing: -0.01em;
     line-height: 1.5rem; 
     font-family: var(--font-inter);
-}
-
-.icon {
-    width: 1.5rem;
-    height: 1.5rem;
-    position: relative;
+    background-color: rgba(12, 9, 11, 1);
 }
