--- a/src/components/ListenAgain/ListenAgain.module.css
+++ b/src/components/ListenAgain/ListenAgain.module.css
@@ -49,25 +49,18 @@
     border-radius: 50%;
 }
 
-.playlistPicture,
-.songPicture {
+.playlistPicture {
     top: 0;
     left: 0;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    height: 180px;
+    height: 11.25rem;
     position: relative;
     max-width: 100%;
-}
-
-.playlistPicture {
-    width: 11.25rem;
-}
-
-.songPicture {
     width: 19.75rem;
+    border: none;
 }
 
 .playIcon {
