--- a/src/components/MainSection/MainSection.module.css
+++ b/src/components/MainSection/MainSection.module.css
@@ -39,7 +39,7 @@
     max-width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-start;
     gap: var(--gap-xs);    
 }
