--- a/src/components/SongCard/SongCard.module.css
+++ b/src/components/SongCard/SongCard.module.css
@@ -28,10 +28,19 @@
     font-family: var(--font-inter);
 }
 
+.songPictureButton {
+    background: none;
+    border: none; 
+    padding: 0; 
+    cursor: pointer;
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+}
+
 .songPicture {
     height: 3rem; 
     width: 3rem; 
-    position: relative;
     object-fit: cover;
     min-height: 3rem;
 }
