--- a/src/components/LikeDislikeControls/LikeDislikeControls.module.css
+++ b/src/components/LikeDislikeControls/LikeDislikeControls.module.css
@@ -1,6 +1,9 @@
 .thumbIcon {
-    height: 1.125rem;
-    width: 1.125rem;
+    height: 1.5rem;
+    width: 1.5rem;
     position: relative;
     min-height: 1.125rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
