--- a/src/components/PlaybackBarCard/PlaybackBarCard.module.css
+++ b/src/components/PlaybackBarCard/PlaybackBarCard.module.css
@@ -10,7 +10,6 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 28rem; 
     overflow: hidden;
     flex-shrink: 0;
     flex-direction: row;
@@ -20,5 +19,12 @@
     color: var(--light-white);
     font-family: var(--font-inter);
     min-width: 16.563rem;
-    max-width: 100%;
+    width: 100%;
 }
+
+.songPicture {
+    height: 3rem;
+    width: 3rem;
+    object-fit: cover;
+    display: block;
+  }
