--- a/src/components/PlaybackBarControls/PlaybackBarControls.module.css
+++ b/src/components/PlaybackBarControls/PlaybackBarControls.module.css
@@ -7,23 +7,29 @@
 }
 
 .controlButton {
-    background: none;
-    border: none; 
-    padding: 0; 
-    cursor: pointer;
-    display: flex; 
+    display: flex;
     align-items: center; 
-    justify-content: center; 
+    justify-content: center;
+    padding: var(--padding-5xs) 0 0;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .skipIcon {
     width: 1.5rem;
     height: 1.5rem;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .pauseIcon {
     height: 2.5rem;
     width: 2.5rem;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
