--- a/src/components/AlbumCard/AlbumCard.module.css
+++ b/src/components/AlbumCard/AlbumCard.module.css
@@ -36,19 +36,6 @@
     max-width: 100%;
 }
 
-.moreIcon {
-    position: absolute;
-    top: 6%;
-    right: 6%; 
-    width: 1.5rem; 
-    height: 1.5rem; 
-    background-size: contain;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    background-color: rgba(0, 0, 0, 0.5); 
-    border-radius: 50%;
-}
-
 .pictureContainer {
     top: 0;
     left: 0;
@@ -58,6 +45,7 @@
     justify-content: flex-start;
     position: relative;
     border: none;
+    cursor: pointer;
 }
 
 .playIcon {
@@ -73,7 +61,6 @@
     border-radius: 100%;
 }
 
-.albumCard:hover .moreIcon,
 .albumCard:hover .playIcon {
     opacity: 1; 
 }
