--- a/src/components/PlaybackBar/PlaybackBar.module.css
+++ b/src/components/PlaybackBar/PlaybackBar.module.css
@@ -54,14 +54,13 @@
   color: var(--color-white);
   font-family: var(--font-inter);
 }
-
 .skip {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   padding: var(--padding-5xs) 0 0;
-  width: 6rem;
+  width: 7.5rem;
 }
 .time {
   text-decoration: none;
@@ -69,10 +68,12 @@
   line-height: 1.5rem;
   color: inherit;
   display: inline-block;
-  width: 100%; 
+  width: auto; 
   margin: 0; 
   padding: 0;
-  text-align: right; 
+  text-align: right;
+  font-variant-numeric: tabular-nums; 
+  white-space: nowrap; 
 }
 
 .skipButtons,
@@ -144,6 +145,7 @@
   align-items: center;
   justify-content: center; 
   position: relative;
+  cursor: pointer;
 }
 .actionButtons {
   display: flex;
