--- a/src/components/PlaylistCard/PlaylistCard.module.css
+++ b/src/components/PlaylistCard/PlaylistCard.module.css
@@ -1,22 +1,22 @@
 .playlistCard {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 13.8rem; 
-    overflow: hidden;
-    flex-shrink: 0;
-    flex-direction: row;
-    gap: var(--gap-5xs);
-    text-align: left;
-    font-size: var(--font-size-base);
-    color: var(--light-white);
-    font-family: var(--font-inter);
-  }
-  .playlistPicture {
-    height: 3rem; 
-    width: 3rem; 
-    position: relative;
-    object-fit: cover;
-    min-height: 3rem;
-  }
-  
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 13.8rem; 
+  overflow: hidden;
+  flex-shrink: 0;
+  flex-direction: row;
+  gap: var(--gap-5xs);
+  text-align: left;
+  font-size: var(--font-size-base);
+  color: var(--light-white);
+  font-family: var(--font-inter);
+  padding: 0.5rem 0;
+}
+.playlistPicture {
+  height: 3rem; 
+  width: 3rem; 
+  position: relative;
+  object-fit: cover;
+  min-height: 3rem;
+}
