--- a/src/components/Seekbar/Seekbar.module.css
+++ b/src/components/Seekbar/Seekbar.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   position: relative;
   cursor: pointer;
+  user-select: none; 
 }
 
 .timeline::after {
@@ -26,5 +27,6 @@
   background-color: #ff0000;
   border-radius: 50%;
   cursor: pointer;
+  user-select: none; 
   transition: transform 150ms ease-in-out;
 }
